[Select Element Accessibility Issue] Add issues & tests, part 2
This CL adds `SelectElementAccessibilityIssue` and its descriptions to
DevTools. User metrics, unit tests, and E2E tests are added to verify
behavior.

Doc:
https://docs.google.com/document/d/1XZGVjR8uBkgNt6Uhg7E09Veo0fZUgh6eHJQPfLEYe_k/edit?usp=sharing

Blink change:
https://chromium-review.googlesource.com/c/chromium/src/+/6079873

Bug: 354032791, 347890366
Change-Id: I1d29540bc503c678a100b607565e7e65b64a6463
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6099709
Commit-Queue: Ana Sollano Kim <ansollan@microsoft.com>
Reviewed-by: Changhao Han <changhaohan@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -507,6 +507,12 @@ grd_files_release_sources = [
   "front_end/models/issues_manager/descriptions/placeholderDescriptionForInvisibleIssues.md",
   "front_end/models/issues_manager/descriptions/propertyRuleInvalidNameIssue.md",
   "front_end/models/issues_manager/descriptions/propertyRuleIssue.md",
+  "front_end/models/issues_manager/descriptions/selectElementAccessibilityDisallowedOptGroupChild.md",
+  "front_end/models/issues_manager/descriptions/selectElementAccessibilityDisallowedSelectChild.md",
+  "front_end/models/issues_manager/descriptions/selectElementAccessibilityInteractiveContentAttributesSelectDescendant.md",
+  "front_end/models/issues_manager/descriptions/selectElementAccessibilityInteractiveContentLegendChild.md",
+  "front_end/models/issues_manager/descriptions/selectElementAccessibilityInteractiveContentOptionChild.md",
+  "front_end/models/issues_manager/descriptions/selectElementAccessibilityNonPhrasingContentOptionChild.md",
   "front_end/models/issues_manager/descriptions/sharedArrayBuffer.md",
   "front_end/models/issues_manager/descriptions/sharedDictionaryUseErrorCrossOriginNoCorsRequest.md",
   "front_end/models/issues_manager/descriptions/sharedDictionaryUseErrorDictionaryLoadFailure.md",
@@ -1014,6 +1020,7 @@ grd_files_debug_sources = [
   "front_end/models/issues_manager/PropertyRuleIssue.js",
   "front_end/models/issues_manager/QuirksModeIssue.js",
   "front_end/models/issues_manager/RelatedIssue.js",
+  "front_end/models/issues_manager/SelectElementAccessibilityIssue.js",
   "front_end/models/issues_manager/SharedArrayBufferIssue.js",
   "front_end/models/issues_manager/SharedDictionaryIssue.js",
   "front_end/models/issues_manager/SourceFrameIssuesManager.js",
@@ -1448,6 +1455,7 @@ grd_files_debug_sources = [
   "front_end/panels/explain/components/consoleInsightSourcesList.css.js",
   "front_end/panels/issues/AffectedBlockedByResponseView.js",
   "front_end/panels/issues/AffectedCookiesView.js",
+  "front_end/panels/issues/AffectedDescendantsWithinSelectElementView.js",
   "front_end/panels/issues/AffectedDirectivesView.js",
   "front_end/panels/issues/AffectedDocumentsInQuirksModeView.js",
   "front_end/panels/issues/AffectedElementsView.js",
