--- a/front_end/models/issues_manager/BUILD.gn
+++ b/front_end/models/issues_manager/BUILD.gn
@@ -35,6 +35,7 @@ devtools_module("issues_manager") {
     "PropertyRuleIssue.ts",
     "QuirksModeIssue.ts",
     "RelatedIssue.ts",
+    "SelectElementAccessibilityIssue.ts",
     "SharedArrayBufferIssue.ts",
     "SharedDictionaryIssue.ts",
     "SourceFrameIssuesManager.ts",
@@ -180,6 +181,12 @@ devtools_issue_description_files = [
   "propertyRuleIssue.md",
   "propertyRuleInvalidNameIssue.md",
   "SameSiteWarnStrictLaxDowngradeStrict.md",
+  "selectElementAccessibilityDisallowedOptGroupChild.md",
+  "selectElementAccessibilityDisallowedSelectChild.md",
+  "selectElementAccessibilityInteractiveContentAttributesSelectDescendant.md",
+  "selectElementAccessibilityInteractiveContentLegendChild.md",
+  "selectElementAccessibilityInteractiveContentOptionChild.md",
+  "selectElementAccessibilityNonPhrasingContentOptionChild.md",
   "sharedArrayBuffer.md",
   "stylesheetLateImport.md",
   "stylesheetRequestFailed.md",
@@ -258,6 +265,7 @@ ts_library("unittests") {
     "MarkdownIssueDescription.test.ts",
     "PropertyRuleIssue.test.ts",
     "RelatedIssue.test.ts",
+    "SelectElementAccessibilityIssue.test.ts",
     "SharedDictionaryIssue.test.ts",
     "StylesheetLoadingIssue.test.ts",
   ]
