[cleanup] Refactor and simplify the `Card` component a bit.
This CL streamlines the `<devtools-card>` component's CSS and simplifies
the `<slot>` handling. It also removes the `.data` setter and simply
uses a `"heading"` attribute (plus the slotted children).

Bug: 343003619, 301364727
Change-Id: I6128cb882d7752037819cfbaa008b6cb07bea65b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6216268
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/components/cards/BUILD.gn
+++ b/front_end/ui/components/cards/BUILD.gn
@@ -15,11 +15,7 @@ generate_css("css_files") {
 devtools_module("card") {
   sources = [ "Card.ts" ]
 
-  deps = [
-    "../../../core/common:bundle",
-    "../../../ui/lit:bundle",
-    "../icon_button:bundle",
-  ]
+  deps = [ "../../../ui/lit:bundle" ]
 }
 
 devtools_entrypoint("bundle") {
@@ -42,7 +38,6 @@ ts_library("unittests") {
 
   deps = [
     ":bundle",
-    "../../../core/common:bundle",
     "../../../testing",
   ]
 }
