Fix card usage and add test
The card usage was changed in: http://crrev.com/c/6216268. This
caused issues for the CookieControlsView. This CL implements the
proper usage and adds a small e2e test to make sure changes to the
card will be caught when component changes are first made.

Bug: 394204700
Fixed: 394321432
(cherry picked from commit 93edd20c61dbc363b6e33706da17ecaf5c68aa6d)
Change-Id: Iac32e67fb8d0a4dfec5c5d439cf7fff62af34306
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6235884
Commit-Queue: Joshua Thomas <masnoble@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>

--- a/test/e2e/security/BUILD.gn
+++ b/test/e2e/security/BUILD.gn
@@ -5,7 +5,10 @@
 import("../../../scripts/build/typescript/typescript.gni")
 
 node_ts_library("security") {
-  sources = [ "security_test.ts" ]
+  sources = [
+    "privacy_test.ts",
+    "security_test.ts",
+  ]
 
   deps = [
     "../../shared",
