Rewrite TypeScript error paths
Trying to rewrite the error output in the terminal so that the link
created does not include the `../..` prefix, that way a person can open
the link directly in VsCode when clicking on it.

Bug: none
Change-Id: Iee59406d0f00e1d7bc7058e7e8e52033c21c9940
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6226102
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>

--- a/.vscode/devtools-workspace-tasks.json
+++ b/.vscode/devtools-workspace-tasks.json
@@ -6,7 +6,7 @@
       "label": "1-build_Debug",
       "type": "shell",
       "command": "npm run build",
-      "group": {"kind": "build", "isDefault": true},
+      "group": { "kind": "build", "isDefault": true },
       "presentation": {
         "echo": true,
         "reveal": "always"
@@ -14,12 +14,13 @@
       "problemMatcher": [
         {
           "owner": "typescript",
-          "fileLocation": ["relative", "${workspaceRoot}/out/Default"],
+          "fileLocation": ["relative", "${workspaceRoot}"],
           "pattern": {
-            "regexp": "^([^\\s].*)\\((\\d+,\\d+)\\):\\s*(.*)$",
+            "regexp": "^([^\\s].*)\\((\\d+,\\d+)\\): error (TS\\d+):\\s*(.*)$",
             "file": 1,
             "location": 2,
-            "message": 3
+            "code": 3,
+            "message": 4
           }
         }
       ]
