[RPP] Define common checklist type, component type for insights
Bug: 394402056
Change-Id: I2a0eae4b120678663b143cab6b6292d48df93847
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6235989
Commit-Queue: Paul Irish <paulirish@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1861,6 +1861,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/ignoreListSetting.css.js",
   "front_end/panels/timeline/components/insights/BaseInsightComponent.js",
   "front_end/panels/timeline/components/insights/CLSCulprits.js",
+  "front_end/panels/timeline/components/insights/Checklist.js",
   "front_end/panels/timeline/components/insights/DOMSize.js",
   "front_end/panels/timeline/components/insights/DocumentLatency.js",
   "front_end/panels/timeline/components/insights/EventRef.js",
@@ -1880,6 +1881,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/ThirdParties.js",
   "front_end/panels/timeline/components/insights/Viewport.js",
   "front_end/panels/timeline/components/insights/baseInsightComponent.css.js",
+  "front_end/panels/timeline/components/insights/checklist.css.js",
   "front_end/panels/timeline/components/insights/table.css.js",
   "front_end/panels/timeline/components/insights/types.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
