--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -10,6 +10,7 @@ import("../../../../../scripts/build/typescript/typescript.gni")
 generate_css("css_files") {
   sources = [
     "baseInsightComponent.css",
+    "checklist.css",
     "table.css",
   ]
 }
@@ -18,6 +19,7 @@ devtools_module("insights") {
   sources = [
     "BaseInsightComponent.ts",
     "CLSCulprits.ts",
+    "Checklist.ts",
     "DOMSize.ts",
     "DocumentLatency.ts",
     "EventRef.ts",
