Create custom html tooltip component
Demo:
https://screencast.googleplex.com/cast/NjUwMDQ5MzQ2MjMzOTU4NHxlMDM1MGJmNS02YQ

Next up:
* Use it in PopoverHelper.ts (working prototype, stacking context a bit tricky)

Bug: 392078321
Change-Id: I24b97b512de04ae66793d2ce7e6decc0a46adf78
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6218491
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Marcel Pütz <marcelpuetz@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -235,6 +235,7 @@ group("unittests") {
     "ui/components/switch:unittests",
     "ui/components/text_editor:unittests",
     "ui/components/text_prompt:unittests",
+    "ui/components/tooltip:unittests",
     "ui/components/tree_outline:unittests",
     "ui/legacy:copy_stylesheets_for_server",
     "ui/legacy:unittests",
