[AI Assistance] Add unit test helpers
Bug: none
Change-Id: I1a81e80413d19795b4582a5780c09201d836f802
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6236124
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -8,6 +8,7 @@ ts_library("testing") {
   testonly = true
 
   sources = [
+    "AiAssistanceHelpers.ts",
     "ConsoleHelpers.ts",
     "ContextMenuHelpers.ts",
     "Cookies.ts",
