RPP: improve LCP fetchpriority text
This CL updates the LCPDiscovery component to show specific text for
when fetchpriority should be applied to make it clear to the user what
we are suggesting.

Fixed: 394009056
Change-Id: I6588b3ed3b7327c94cd84f052370a3a89595adf5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6235031
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -48,6 +48,7 @@ copy_to_gen("traces") {
     "large-layout-small-recalc.json.gz",
     "large-profile.cpuprofile.gz",
     "large-recalc-style.json.gz",
+    "lcp-fetchpriority-high.json.gz",
     "lcp-images-rasterizer.json.gz",
     "lcp-images.json.gz",
     "lcp-late-paint-event.json.gz",
