[AI Assistance] Extract data formatters from agents
Includes the network and file agents for now.

Bug: none
Change-Id: Id6211a64199daede16b821a4693b3ed474b71249
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6243235
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/ai_assistance/BUILD.gn
+++ b/front_end/panels/ai_assistance/BUILD.gn
@@ -31,6 +31,8 @@ devtools_module("ai_assistance") {
     "agents/StylingAgent.ts",
     "components/ChatView.ts",
     "components/UserActionRow.ts",
+    "data_formatters/FileFormatter.ts",
+    "data_formatters/NetworkRequestFormatter.ts",
   ]
 
   deps = [
@@ -97,6 +99,8 @@ ts_library("unittests") {
     "agents/StylingAgent.test.ts",
     "components/ChatView.test.ts",
     "components/UserActionRow.test.ts",
+    "data_formatters/FileFormatter.test.ts",
+    "data_formatters/NetworkRequestFormatter.test.ts",
   ]
 
   deps = [
