--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1193,6 +1193,8 @@ grd_files_debug_sources = [
   "front_end/panels/ai_assistance/components/UserActionRow.js",
   "front_end/panels/ai_assistance/components/chatView.css.js",
   "front_end/panels/ai_assistance/components/userActionRow.css.js",
+  "front_end/panels/ai_assistance/data_formatters/FileFormatter.js",
+  "front_end/panels/ai_assistance/data_formatters/NetworkRequestFormatter.js",
   "front_end/panels/animation/AnimationGroupPreviewUI.js",
   "front_end/panels/animation/AnimationScreenshotPopover.js",
   "front_end/panels/animation/AnimationTimeline.js",
