[AI Assistance] clean up debug utils
Bug: none
Change-Id: I60f1318c85ff9a3c80543c217ce0da20c6464824
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6243821
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1195,6 +1195,7 @@ grd_files_debug_sources = [
   "front_end/panels/ai_assistance/components/userActionRow.css.js",
   "front_end/panels/ai_assistance/data_formatters/FileFormatter.js",
   "front_end/panels/ai_assistance/data_formatters/NetworkRequestFormatter.js",
+  "front_end/panels/ai_assistance/debug.js",
   "front_end/panels/animation/AnimationGroupPreviewUI.js",
   "front_end/panels/animation/AnimationScreenshotPopover.js",
   "front_end/panels/animation/AnimationTimeline.js",
