Convert DataGridWithPreview to KeyValueStorageItemsView
As it is, DataGridWithPreview is not really a reusable component.

Bug: 394287937
Change-Id: I515dfd5f976e5f6ec52d902146838f111e638c0f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6239272
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/application/BUILD.gn
+++ b/front_end/panels/application/BUILD.gn
@@ -48,6 +48,7 @@ devtools_module("application") {
     "InterestGroupStorageModel.ts",
     "InterestGroupStorageView.ts",
     "InterestGroupTreeElement.ts",
+    "KeyValueStorageItemsView.ts",
     "OpenedWindowDetailsView.ts",
     "PreloadingTreeElement.ts",
     "ReportingApiReportsView.ts",
@@ -152,6 +153,7 @@ ts_library("unittests") {
     "IndexedDBViews.test.ts",
     "InterestGroupStorageView.test.ts",
     "InterestGroupTreeElement.test.ts",
+    "KeyValueStorageItemsView.test.ts",
     "PreloadingTreeElement.test.ts",
     "ReportingApiReportsView.test.ts",
     "ReportingApiView.test.ts",
