AI: Add base Performance Insights agent
This CL adds the foundations for the new Perf Insights agent. It is not
usable yet as we never set the right `flavor` when the user selects an
Insight, so the agent is never triggered.

Additionally to enable it you must enable the feature param:

```
--enable-features="DevToolsAiAssistancePerformanceAgent:insights_enabled/true"
```

Which is false by default.

Bug: 394552594
Change-Id: If5771962a78653c9150307b81134a8a81f59737f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6244423
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1187,6 +1187,7 @@ grd_files_debug_sources = [
   "front_end/panels/ai_assistance/agents/NetworkAgent.js",
   "front_end/panels/ai_assistance/agents/PatchAgent.js",
   "front_end/panels/ai_assistance/agents/PerformanceAgent.js",
+  "front_end/panels/ai_assistance/agents/PerformanceInsightsAgent.js",
   "front_end/panels/ai_assistance/agents/StylingAgent.js",
   "front_end/panels/ai_assistance/aiAssistancePanel.css.js",
   "front_end/panels/ai_assistance/components/ChatView.js",
@@ -1934,6 +1935,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/utils/Helpers.js",
   "front_end/panels/timeline/utils/IgnoreList.js",
   "front_end/panels/timeline/utils/ImageCache.js",
+  "front_end/panels/timeline/utils/InsightAIContext.js",
   "front_end/panels/timeline/utils/SourceMapsResolver.js",
   "front_end/panels/web_audio/AudioContextContentBuilder.js",
   "front_end/panels/web_audio/AudioContextSelector.js",
