--- a/front_end/panels/timeline/utils/BUILD.gn
+++ b/front_end/panels/timeline/utils/BUILD.gn
@@ -14,6 +14,7 @@ devtools_module("utils") {
     "Helpers.ts",
     "IgnoreList.ts",
     "ImageCache.ts",
+    "InsightAIContext.ts",
     "SourceMapsResolver.ts",
   ]
 
