[debug] Fix VsCode debug script
This is need to be able to run test by test, it will open
in terminal then you would need to switch to Debug Console to run
scripts when paused.

Bug: none
Change-Id: Iaa34097a29155f8bf4d58b4ba0c0f4917b6f2031
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6244430
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/.vscode/devtools-workspace-launch.json
+++ b/.vscode/devtools-workspace-launch.json
@@ -2,16 +2,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "pwa-chrome",
+      "type": "chrome",
       "request": "launch",
       "name": "Run unit tests in VS Code debugger",
       "preLaunchTask": "1-build_Debug",
-      "runtimeExecutable": "/usr/bin/npm",
-      "runtimeArgs": [
-        "run",
-        "test",
-        "front_end"
-      ],
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "test", "front_end"],
       "port": 7722,
       "timeout": 30000,
       "browserLaunchLocation": "workspace",
@@ -19,43 +15,29 @@
       "trace": true
     },
     {
-      "type": "pwa-node",
+      "type": "node",
       "request": "launch",
       "name": "Run end-to-end tests in VS Code debugger",
       "preLaunchTask": "1-build_Debug",
-      "runtimeExecutable": "/usr/bin/npm",
-      "runtimeArgs": [
-        "run",
-        "test",
-        "test/e2e"
-      ]
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "test", "test/e2e"]
     },
     {
-      "type": "pwa-node",
+      "type": "node",
       "request": "launch",
       "name": "Run test",
       "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "/usr/bin/npm",
-      "runtimeArgs": [
-        "run",
-        "test",
-        "--",
-        "${file}"
-      ]
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "test", "--", "${file}"]
     },
     {
-      "type": "pwa-node",
+      "type": "node",
       "request": "launch",
       "name": "Debug test",
       "cwd": "${workspaceFolder}",
-      "runtimeExecutable": "/usr/bin/npm",
-      "runtimeArgs": [
-        "run",
-        "test",
-        "--",
-        "--debug",
-        "${file}"
-      ]
+      "runtimeExecutable": "npm",
+      "console": "integratedTerminal",
+      "runtimeArgs": ["run", "test", "--", "--debug", "${file}"]
     }
   ]
 }
