Move all render functions outside of the ChatView class
Also, move code for MarkdownRendererWithCodeBlock to a separate file.

This is part of the process to align ChatView with the UI eng vision.

Bug: 394005781
Change-Id: I64a98dd813641b52e20c093c2294e2d63dfe5485
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6242898
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1191,6 +1191,7 @@ grd_files_debug_sources = [
   "front_end/panels/ai_assistance/agents/StylingAgent.js",
   "front_end/panels/ai_assistance/aiAssistancePanel.css.js",
   "front_end/panels/ai_assistance/components/ChatView.js",
+  "front_end/panels/ai_assistance/components/MarkdownRendererWithCodeBlock.js",
   "front_end/panels/ai_assistance/components/UserActionRow.js",
   "front_end/panels/ai_assistance/components/chatView.css.js",
   "front_end/panels/ai_assistance/components/userActionRow.css.js",
