Introduce `ProjectSettingsModel` singleton.
Bug: 395037775
Change-Id: I7f78d1e7801dcddc103d66e65599ce47bb0b08a9
Doc: https://goo.gle/devtools-json-design
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6252782
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -131,6 +131,7 @@ group("unittests") {
     "models/javascript_metadata:unittests",
     "models/logs:unittests",
     "models/persistence:unittests",
+    "models/project_settings:unittests",
     "models/source_map_scopes:unittests",
     "models/text_utils:unittests",
     "models/trace:unittests",
