--- a/front_end/entrypoints/main/BUILD.gn
+++ b/front_end/entrypoints/main/BUILD.gn
@@ -28,6 +28,7 @@ devtools_module("main") {
     "../../models/issues_manager:bundle",
     "../../models/logs:bundle",
     "../../models/persistence:bundle",
+    "../../models/project_settings:bundle",
     "../../models/workspace:bundle",
     "../../panels/snippets:bundle",
     "../../panels/timeline:bundle",
