--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -548,6 +548,7 @@ grd_files_release_sources = [
   "front_end/models/logs/logs.js",
   "front_end/models/persistence/persistence-meta.js",
   "front_end/models/persistence/persistence.js",
+  "front_end/models/project_settings/project_settings.js",
   "front_end/models/source_map_scopes/source_map_scopes.js",
   "front_end/models/text_utils/text_utils.js",
   "front_end/models/timeline_model/timeline_model.js",
@@ -1047,6 +1048,7 @@ grd_files_debug_sources = [
   "front_end/models/persistence/WorkspaceSettingsTab.js",
   "front_end/models/persistence/editFileSystemView.css.js",
   "front_end/models/persistence/workspaceSettingsTab.css.js",
+  "front_end/models/project_settings/ProjectSettingsModel.js",
   "front_end/models/source_map_scopes/NamesResolver.js",
   "front_end/models/source_map_scopes/ScopeChainModel.js",
   "front_end/models/source_map_scopes/ScopeTreeCache.js",
