Use the new <devtools-data-grid> in the CookieReportView
Bug: 301364727
Change-Id: Iefe9ce16fac4814b95361f66ae196336e2b2b0bf
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6252824
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/ui/legacy/components/data_grid/BUILD.gn
+++ b/front_end/ui/legacy/components/data_grid/BUILD.gn
@@ -48,10 +48,7 @@ devtools_entrypoint("bundle") {
 ts_library("unittests") {
   testonly = true
 
-  sources = [
-    "DataGrid.test.ts",
-    "DataGridElement.test.ts",
-  ]
+  sources = [ "DataGridElement.test.ts" ]
 
   deps = [
     ":bundle",
