[RPP] Add ScriptsHandler for content and source maps
Bug: 394373632, 394373852
Change-Id: If57823fcae581a0788a9339dc1cf1db2c9521412
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6253620
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1101,6 +1101,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/handlers/RendererHandler.js",
   "front_end/models/trace/handlers/SamplesHandler.js",
   "front_end/models/trace/handlers/ScreenshotsHandler.js",
+  "front_end/models/trace/handlers/ScriptsHandler.js",
   "front_end/models/trace/handlers/SelectorStatsHandler.js",
   "front_end/models/trace/handlers/ServerTimingsHandler.js",
   "front_end/models/trace/handlers/Threads.js",
