--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -34,6 +34,7 @@ devtools_module("handlers") {
     "RendererHandler.ts",
     "SamplesHandler.ts",
     "ScreenshotsHandler.ts",
+    "ScriptsHandler.ts",
     "SelectorStatsHandler.ts",
     "ServerTimingsHandler.ts",
     "Threads.ts",
@@ -94,6 +95,7 @@ ts_library("unittests") {
     "RendererHandler.test.ts",
     "SamplesHandler.test.ts",
     "ScreenshotsHandler.test.ts",
+    "ScriptsHandler.test.ts",
     "SelectorStatsHandler.test.ts",
     "ServerTimingsHandler.test.ts",
     "Threads.test.ts",
