[AI Assistance] Patch agent to find files
Basic version of an agent for the change summary view that tells which
files need to be updated.

Bug: 393267670
Change-Id: I5d99269f697599603afc8764e319fa4e1337bc76
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6249519
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/ai_assistance/BUILD.gn
+++ b/front_end/panels/ai_assistance/BUILD.gn
@@ -98,6 +98,7 @@ ts_library("unittests") {
     "agents/AiAgent.test.ts",
     "agents/FileAgent.test.ts",
     "agents/NetworkAgent.test.ts",
+    "agents/PatchAgent.test.ts",
     "agents/PerformanceAgent.test.ts",
     "agents/StylingAgent.test.ts",
     "components/ChatView.test.ts",
