[cleanup] Move the host configuration to `Root.Runtime.hostConfig`.
Ideally the host configuration would live in `core/host`, but due to the
current setup, this isn't possible. However it also doesn't make sense
to bolt it into `Settings`, since this has nothing to do with settings.
Rather, it makes sense to keep it together with the type definitions as
part of `core/root`. This also simplifies the test handling and makes it
more robust.

Fixed: 396033932
Change-Id: I8f00fc84f62b180ede4407741d261544a13218da
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6257569
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/models/crux-manager/BUILD.gn
+++ b/front_end/models/crux-manager/BUILD.gn
@@ -11,6 +11,7 @@ devtools_module("crux-manager") {
 
   deps = [
     "../../core/common:bundle",
+    "../../core/root:bundle",
     "../../core/sdk:bundle",
     "../emulation:bundle",
   ]
