--- a/front_end/panels/console/BUILD.gn
+++ b/front_end/panels/console/BUILD.gn
@@ -39,6 +39,7 @@ devtools_module("console") {
     "../../core/host:bundle",
     "../../core/i18n:bundle",
     "../../core/platform:bundle",
+    "../../core/root:bundle",
     "../../core/sdk:bundle",
     "../../models/bindings:bundle",
     "../../models/issues_manager:bundle",
