--- a/front_end/panels/security/BUILD.gn
+++ b/front_end/panels/security/BUILD.gn
@@ -36,6 +36,7 @@ devtools_module("security") {
     "../../core/common:bundle",
     "../../core/host:bundle",
     "../../core/i18n:bundle",
+    "../../core/root:bundle",
     "../../core/sdk:bundle",
     "../../generated:protocol",
     "../../models/issues_manager:bundle",
@@ -71,7 +72,9 @@ devtools_entrypoint("meta") {
 
   deps = [
     ":bundle",
+    "../../core/common:bundle",
     "../../core/i18n:bundle",
+    "../../core/root:bundle",
     "../../ui/legacy:bundle",
   ]
 
@@ -91,6 +94,7 @@ ts_library("unittests") {
   deps = [
     ":bundle",
     "../../core/platform:bundle",
+    "../../core/root:bundle",
     "../../core/sdk:bundle",
     "../../generated:protocol",
     "../../testing",
