--- a/front_end/ui/legacy/theme_support/BUILD.gn
+++ b/front_end/ui/legacy/theme_support/BUILD.gn
@@ -12,6 +12,7 @@ devtools_module("theme_support") {
   deps = [
     "../../../core/common:bundle",
     "../../../core/host:bundle",
+    "../../../core/root:bundle",
   ]
 }
 
