[RPP] Add Trace.Extras.ScriptDuplication
For scripts with source maps, this attributes every byte to an authored
script, and w/ the `sources` field determines duplication across
multiple bundles.

Implementation and tests adapted from Lighthouse:

https://github.com/GoogleChrome/lighthouse/blob/b7102eee6db612e718f48cae252a3ee7aa86e6a8/core/computed/js-bundles.js
https://github.com/GoogleChrome/lighthouse/blob/b7102eee6db612e718f48cae252a3ee7aa86e6a8/core/test/computed/js-bundles-test.js
https://github.com/GoogleChrome/lighthouse/blob/b7102eee6db612e718f48cae252a3ee7aa86e6a8/core/computed/module-duplication.js
https://github.com/GoogleChrome/lighthouse/blob/b7102eee6db612e718f48cae252a3ee7aa86e6a8/core/test/computed/module-duplication-test.js

Bug: 394373632
Change-Id: Ia3b44736a13f8d7fa82aacacbb97b18f9f1404fe
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6257037
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -12,6 +12,7 @@ devtools_module("insights") {
     "Common.ts",
     "DOMSize.ts",
     "DocumentLatency.ts",
+    "DuplicateJavaScript.ts",
     "FontDisplay.ts",
     "ForcedReflow.ts",
     "ImageDelivery.ts",
