--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -89,6 +89,14 @@ copy_to_gen("traces") {
     "render-blocking-body.json.gz",
     "render-blocking-in-iframe.json.gz",
     "scheduler-post-task.json.gz",
+    "scripts/coursehero-bundle-1.js.gz",
+    "scripts/coursehero-bundle-1.js.map.gz",
+    "scripts/coursehero-bundle-2.js.gz",
+    "scripts/coursehero-bundle-2.js.map.gz",
+    "scripts/foo.min.js.gz",
+    "scripts/foo.min.js.map.gz",
+    "scripts/squoosh.js.gz",
+    "scripts/squoosh.js.map.gz",
     "selector-stats-frame-test.json.gz",
     "selector-stats.json.gz",
     "server-timings.json.gz",
