--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1071,6 +1071,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/extras/FilmStrip.js",
   "front_end/models/trace/extras/MainThreadActivity.js",
   "front_end/models/trace/extras/Metadata.js",
+  "front_end/models/trace/extras/ScriptDuplication.js",
   "front_end/models/trace/extras/StackTraceForEvent.js",
   "front_end/models/trace/extras/ThirdParties.js",
   "front_end/models/trace/extras/TimelineJSProfile.js",
@@ -1122,6 +1123,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/insights/Common.js",
   "front_end/models/trace/insights/DOMSize.js",
   "front_end/models/trace/insights/DocumentLatency.js",
+  "front_end/models/trace/insights/DuplicateJavaScript.js",
   "front_end/models/trace/insights/FontDisplay.js",
   "front_end/models/trace/insights/ForcedReflow.js",
   "front_end/models/trace/insights/ImageDelivery.js",
