--- a/front_end/models/trace/extras/BUILD.gn
+++ b/front_end/models/trace/extras/BUILD.gn
@@ -13,6 +13,7 @@ devtools_module("extras") {
     "FilmStrip.ts",
     "MainThreadActivity.ts",
     "Metadata.ts",
+    "ScriptDuplication.ts",
     "StackTraceForEvent.ts",
     "ThirdParties.ts",
     "TimelineJSProfile.ts",
@@ -48,6 +49,7 @@ ts_library("unittests") {
     "FilmStrip.test.ts",
     "MainThreadActivity.test.ts",
     "Metadata.test.ts",
+    "ScriptDuplication.test.ts",
     "StackTraceForEvent.test.ts",
     "ThirdParties.test.ts",
     "TraceFilter.test.ts",
