[GM3Restyling] Update WebAudio empty state
Before: https://i.imgur.com/5iWoTpW.png
After: https://i.imgur.com/GhMYq8R.png
Bug: 325443331
Change-Id: I1d9b2c13f54c74dafc81fee1dd54b2d85f2ae14c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6257650
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/web_audio/BUILD.gn
+++ b/front_end/panels/web_audio/BUILD.gn
@@ -65,7 +65,10 @@ devtools_entrypoint("meta") {
 ts_library("unittests") {
   testonly = true
 
-  sources = [ "web_audio.test.ts" ]
+  sources = [
+    "WebAudioView.test.ts",
+    "web_audio.test.ts",
+  ]
 
   deps = [
     ":bundle",
