[AiAssistance] Move markdown renderer tests in a separate file
Drive-by:
* Rename `Freestyler` references to be `AiAssistance` or `EvaluateAction`
based on what is imported.

Bug: none
Change-Id: I87d7cc5646cc25097243eab4fa68f129c61f5149
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6264204
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/ai_assistance/BUILD.gn
+++ b/front_end/panels/ai_assistance/BUILD.gn
@@ -102,6 +102,7 @@ ts_library("unittests") {
     "agents/PerformanceAgent.test.ts",
     "agents/StylingAgent.test.ts",
     "components/ChatView.test.ts",
+    "components/MarkdownRendererWithCodeBlock.test.ts",
     "components/UserActionRow.test.ts",
     "data_formatters/FileFormatter.test.ts",
     "data_formatters/NetworkRequestFormatter.test.ts",
