AI: build out Insight AI integration
This CL adds the basic (placeholder) UX to each Insight and hooks up the
actions to open the AI panel with the right context.

Bug: 394552594
Change-Id: I0551312352d18dade636d320c83d3bd5e5a01275
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6264643
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/timeline/utils/BUILD.gn
+++ b/front_end/panels/timeline/utils/BUILD.gn
@@ -64,6 +64,7 @@ ts_library("unittests") {
     "Helpers.test.ts",
     "IgnoreList.test.ts",
     "ImageCache.test.ts",
+    "InsightAIContext.test.ts",
     "SourceMapsResolver.test.ts",
   ]
 
