[css] Add a css value trace view
This CL adds a view for tracing the computation of a CSS value.

Bug: 396080529
Change-Id: I73c5be6ceb170028aac62886d549f4a690d7b213
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6269196
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1369,6 +1369,7 @@ grd_files_debug_sources = [
   "front_end/panels/elements/AccessibilityTreeView.js",
   "front_end/panels/elements/CSSRuleValidator.js",
   "front_end/panels/elements/CSSRuleValidatorHelper.js",
+  "front_end/panels/elements/CSSValueTraceView.js",
   "front_end/panels/elements/ClassesPaneWidget.js",
   "front_end/panels/elements/ColorSwatchPopoverIcon.js",
   "front_end/panels/elements/ComputedStyleModel.js",
@@ -1434,6 +1435,7 @@ grd_files_debug_sources = [
   "front_end/panels/elements/components/queryContainer.css.js",
   "front_end/panels/elements/components/stylePropertyEditor.css.js",
   "front_end/panels/elements/computedStyleSidebarPane.css.js",
+  "front_end/panels/elements/cssValueTraceView.css.js",
   "front_end/panels/elements/domLinkifier.css.js",
   "front_end/panels/elements/elementStatePaneWidget.css.js",
   "front_end/panels/elements/elementsPanel.css.js",
