--- a/front_end/panels/issues/BUILD.gn
+++ b/front_end/panels/issues/BUILD.gn
@@ -44,6 +44,7 @@ devtools_module("issues") {
   deps = [
     "../../core/common:bundle",
     "../../core/i18n:bundle",
+    "../../core/platform:bundle",
     "../../core/sdk:bundle",
     "../../models/issues_manager:bundle",
     "../../models/logs:bundle",
@@ -97,6 +98,7 @@ ts_library("unittests") {
   sources = [
     "IssueAggregator.test.ts",
     "IssueView.test.ts",
+    "IssuesPane.test.ts",
   ]
 
   deps = [
